--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Adding config.py file.
+config.py
+
+#Adding addiontional files
+API_Practice.ipynb
+random_numbers.ipynb
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
